--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "dependencies": {
     "antd": "^4.16.8",
     "next": "11.0.1",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-custom-scrollbars": "^4.2.1",
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-dynamic-modules": "^5.2.3",
+    "redux-dynamic-modules-thunk": "^5.2.3",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "7.31.0",
